Issue 5231 - Use Java 7 features